exports[`prefer-set-has > invalid(1): const foo = [1, 2, 3, 4, 5];\nfunction unicorn() {\n\treturn foo.includes(1);\n} 1`] = `

Options:
- minimumItems: 5

Code:
  1 | const foo = [1, 2, 3, 4, 5];
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

`;

exports[`prefer-set-has > invalid(1): const foo = [1, 2, 3, 4, 5];\nfunction unicorn() {\n\treturn foo.includes(1);\n} 2`] = `

Message:
> 1 | const foo = [1, 2, 3, 4, 5];
    |       ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

Output:
  1 | const foo = new Set([1, 2, 3, 4, 5]);
  2 | function unicorn() {
  3 | 	return foo.has(1);
  4 | }

`;

exports[`prefer-set-has > invalid(1): const foo = [1, 2, 3];\nfunction unicorn() {\n\treturn foo.includes(1);\n} 1`] = `

  1 | const foo = [1, 2, 3];
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

`;

exports[`prefer-set-has > invalid(1): const foo = [1, 2, 3];\nfunction unicorn() {\n\treturn foo.includes(1);\n} 2`] = `

Message:
> 1 | const foo = [1, 2, 3];
    |       ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

Output:
  1 | const foo = new Set([1, 2, 3]);
  2 | function unicorn() {
  3 | 	return foo.has(1);
  4 | }

`;

exports[`prefer-set-has > invalid(10): const foo = [1, 2, 3];\nfunction unicorn() {\n\treturn foo.includes(1);\n} 1`] = `

  1 | const foo = [1, 2, 3];
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

`;

exports[`prefer-set-has > invalid(10): const foo = [1, 2, 3];\nfunction unicorn() {\n\treturn foo.includes(1);\n} 2`] = `

Message:
> 1 | const foo = [1, 2, 3];
    |       ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

Output:
  1 | const foo = new Set([1, 2, 3]);
  2 | function unicorn() {
  3 | 	return foo.has(1);
  4 | }

`;

exports[`prefer-set-has > invalid(10): const foo = new Array(5);\nfunction unicorn() {\n\treturn foo.includes(1);\n} 1`] = `

Options:
- minimumItems: 5

Code:
  1 | const foo = new Array(5);
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

`;

exports[`prefer-set-has > invalid(10): const foo = new Array(5);\nfunction unicorn() {\n\treturn foo.includes(1);\n} 2`] = `

Message:
> 1 | const foo = new Array(5);
    |       ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

Output:
  1 | const foo = new Set(new Array(5));
  2 | function unicorn() {
  3 | 	return foo.has(1);
  4 | }

`;

exports[`prefer-set-has > invalid(11): const foo = [1, 2, 3];\nfunction * unicorn() {\n\treturn foo.includes(1);\n} 1`] = `

  1 | const foo = [1, 2, 3];
  2 | function * unicorn() {
  3 | 	return foo.includes(1);
  4 | }

`;

exports[`prefer-set-has > invalid(11): const foo = [1, 2, 3];\nfunction * unicorn() {\n\treturn foo.includes(1);\n} 2`] = `

Message:
> 1 | const foo = [1, 2, 3];
    |       ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
  2 | function * unicorn() {
  3 | 	return foo.includes(1);
  4 | }

Output:
  1 | const foo = new Set([1, 2, 3]);
  2 | function * unicorn() {
  3 | 	return foo.has(1);
  4 | }

`;

exports[`prefer-set-has > invalid(11): const foo = new Array(1, 2, 3, 4, 5);\nfunction unicorn() {\n\treturn foo.includes(1);\n} 1`] = `

Options:
- minimumItems: 5

Code:
  1 | const foo = new Array(1, 2, 3, 4, 5);
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

`;

exports[`prefer-set-has > invalid(11): const foo = new Array(1, 2, 3, 4, 5);\nfunction unicorn() {\n\treturn foo.includes(1);\n} 2`] = `

Message:
> 1 | const foo = new Array(1, 2, 3, 4, 5);
    |       ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

Output:
  1 | const foo = new Set(new Array(1, 2, 3, 4, 5));
  2 | function unicorn() {
  3 | 	return foo.has(1);
  4 | }

`;

exports[`prefer-set-has > invalid(12): const foo = Array.from({'length': 5}, (_, index) => index);\nfunction unicorn() {\n\treturn foo.includes(1);\n} 1`] = `

Options:
- minimumItems: 5

Code:
  1 | const foo = Array.from({'length': 5}, (_, index) => index);
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

`;

exports[`prefer-set-has > invalid(12): const foo = Array.from({'length': 5}, (_, index) => index);\nfunction unicorn() {\n\treturn foo.includes(1);\n} 2`] = `

Message:
> 1 | const foo = Array.from({'length': 5}, (_, index) => index);
    |       ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

Output:
  1 | const foo = new Set(Array.from({'length': 5}, (_, index) => index));
  2 | function unicorn() {
  3 | 	return foo.has(1);
  4 | }

`;

exports[`prefer-set-has > invalid(12): const foo = [1, 2, 3];\nasync function unicorn() {\n\treturn foo.includes(1);\n} 1`] = `

  1 | const foo = [1, 2, 3];
  2 | async function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

`;

exports[`prefer-set-has > invalid(12): const foo = [1, 2, 3];\nasync function unicorn() {\n\treturn foo.includes(1);\n} 2`] = `

Message:
> 1 | const foo = [1, 2, 3];
    |       ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
  2 | async function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

Output:
  1 | const foo = new Set([1, 2, 3]);
  2 | async function unicorn() {
  3 | 	return foo.has(1);
  4 | }

`;

exports[`prefer-set-has > invalid(13): const foo = [1, 2, 3];\nasync function * unicorn() {\n\treturn foo.includes(1);\n} 1`] = `

  1 | const foo = [1, 2, 3];
  2 | async function * unicorn() {
  3 | 	return foo.includes(1);
  4 | }

`;

exports[`prefer-set-has > invalid(13): const foo = [1, 2, 3];\nasync function * unicorn() {\n\treturn foo.includes(1);\n} 2`] = `

Message:
> 1 | const foo = [1, 2, 3];
    |       ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
  2 | async function * unicorn() {
  3 | 	return foo.includes(1);
  4 | }

Output:
  1 | const foo = new Set([1, 2, 3]);
  2 | async function * unicorn() {
  3 | 	return foo.has(1);
  4 | }

`;

exports[`prefer-set-has > invalid(13): const foo = new Array('a');\nfunction unicorn() {\n\treturn foo.includes(1);\n} 1`] = `

Options:
- minimumItems: 1

Code:
  1 | const foo = new Array('a');
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

`;

exports[`prefer-set-has > invalid(13): const foo = new Array('a');\nfunction unicorn() {\n\treturn foo.includes(1);\n} 2`] = `

Message:
> 1 | const foo = new Array('a');
    |       ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

Output:
  1 | const foo = new Set(new Array('a'));
  2 | function unicorn() {
  3 | 	return foo.has(1);
  4 | }

`;

exports[`prefer-set-has > invalid(14): const foo = [1, 2, 3];\nconst unicorn = function () {\n\treturn foo.includes(1);\n} 1`] = `

  1 | const foo = [1, 2, 3];
  2 | const unicorn = function () {
  3 | 	return foo.includes(1);
  4 | }

`;

exports[`prefer-set-has > invalid(14): const foo = [1, 2, 3];\nconst unicorn = function () {\n\treturn foo.includes(1);\n} 2`] = `

Message:
> 1 | const foo = [1, 2, 3];
    |       ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
  2 | const unicorn = function () {
  3 | 	return foo.includes(1);
  4 | }

Output:
  1 | const foo = new Set([1, 2, 3]);
  2 | const unicorn = function () {
  3 | 	return foo.has(1);
  4 | }

`;

exports[`prefer-set-has > invalid(15): const foo = [1, 2, 3];\nconst unicorn = () => foo.includes(1); 1`] = `

  1 | const foo = [1, 2, 3];
  2 | const unicorn = () => foo.includes(1);

`;

exports[`prefer-set-has > invalid(15): const foo = [1, 2, 3];\nconst unicorn = () => foo.includes(1); 2`] = `

Message:
> 1 | const foo = [1, 2, 3];
    |       ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
  2 | const unicorn = () => foo.includes(1);

Output:
  1 | const foo = new Set([1, 2, 3]);
  2 | const unicorn = () => foo.has(1);

`;

exports[`prefer-set-has > invalid(16): const foo = [1, 2, 3];\nconst a = {\n\tb() {\n\t\treturn foo.includes(1);\n\t}\n}; 1`] = `

  1 | const foo = [1, 2, 3];
  2 | const a = {
  3 | 	b() {
  4 | 		return foo.includes(1);
  5 | 	}
  6 | };

`;

exports[`prefer-set-has > invalid(16): const foo = [1, 2, 3];\nconst a = {\n\tb() {\n\t\treturn foo.includes(1);\n\t}\n}; 2`] = `

Message:
> 1 | const foo = [1, 2, 3];
    |       ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
  2 | const a = {
  3 | 	b() {
  4 | 		return foo.includes(1);
  5 | 	}
  6 | };

Output:
  1 | const foo = new Set([1, 2, 3]);
  2 | const a = {
  3 | 	b() {
  4 | 		return foo.has(1);
  5 | 	}
  6 | };

`;

exports[`prefer-set-has > invalid(17): const foo = [1, 2, 3];\nclass A {\n\tb() {\n\t\treturn foo.includes(1);\n\t}\n} 1`] = `

  1 | const foo = [1, 2, 3];
  2 | class A {
  3 | 	b() {
  4 | 		return foo.includes(1);
  5 | 	}
  6 | }

`;

exports[`prefer-set-has > invalid(17): const foo = [1, 2, 3];\nclass A {\n\tb() {\n\t\treturn foo.includes(1);\n\t}\n} 2`] = `

Message:
> 1 | const foo = [1, 2, 3];
    |       ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
  2 | class A {
  3 | 	b() {
  4 | 		return foo.includes(1);
  5 | 	}
  6 | }

Output:
  1 | const foo = new Set([1, 2, 3]);
  2 | class A {
  3 | 	b() {
  4 | 		return foo.has(1);
  5 | 	}
  6 | }

`;

exports[`prefer-set-has > invalid(18): const foo = [...bar];\nfunction unicorn() {\n\treturn foo.includes(1);\n}\nbar.pop(); 1`] = `

  1 | const foo = [...bar];
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }
  5 | bar.pop();

`;

exports[`prefer-set-has > invalid(18): const foo = [...bar];\nfunction unicorn() {\n\treturn foo.includes(1);\n}\nbar.pop(); 2`] = `

Message:
> 1 | const foo = [...bar];
    |       ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }
  5 | bar.pop();

Output:
  1 | const foo = new Set([...bar]);
  2 | function unicorn() {
  3 | 	return foo.has(1);
  4 | }
  5 | bar.pop();

`;

exports[`prefer-set-has > invalid(19): const foo = [1, 2, 3];\nfunction unicorn() {\n\tconst exists = foo.includes(1);\n\tfunction isExists(find) {\n\t\treturn foo.includes(find);\n\t}\n} 1`] = `

  1 | const foo = [1, 2, 3];
  2 | function unicorn() {
  3 | 	const exists = foo.includes(1);
  4 | 	function isExists(find) {
  5 | 		return foo.includes(find);
  6 | 	}
  7 | }

`;

exports[`prefer-set-has > invalid(19): const foo = [1, 2, 3];\nfunction unicorn() {\n\tconst exists = foo.includes(1);\n\tfunction isExists(find) {\n\t\treturn foo.includes(find);\n\t}\n} 2`] = `

Message:
> 1 | const foo = [1, 2, 3];
    |       ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
  2 | function unicorn() {
  3 | 	const exists = foo.includes(1);
  4 | 	function isExists(find) {
  5 | 		return foo.includes(find);
  6 | 	}
  7 | }

Output:
  1 | const foo = new Set([1, 2, 3]);
  2 | function unicorn() {
  3 | 	const exists = foo.has(1);
  4 | 	function isExists(find) {
  5 | 		return foo.has(find);
  6 | 	}
  7 | }

`;

exports[`prefer-set-has > invalid(2): const foo = Array.of(1, 2, 3, 4, 5);\nfunction unicorn() {\n\treturn foo.includes(1);\n} 1`] = `

Options:
- minimumItems: 5

Code:
  1 | const foo = Array.of(1, 2, 3, 4, 5);
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

`;

exports[`prefer-set-has > invalid(2): const foo = Array.of(1, 2, 3, 4, 5);\nfunction unicorn() {\n\treturn foo.includes(1);\n} 2`] = `

Message:
> 1 | const foo = Array.of(1, 2, 3, 4, 5);
    |       ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

Output:
  1 | const foo = new Set(Array.of(1, 2, 3, 4, 5));
  2 | function unicorn() {
  3 | 	return foo.has(1);
  4 | }

`;

exports[`prefer-set-has > invalid(2): const foo = [1, 2, 3];\nconst isExists = foo.includes(1);\nconst isExists2 = foo.includes(2); 1`] = `

  1 | const foo = [1, 2, 3];
  2 | const isExists = foo.includes(1);
  3 | const isExists2 = foo.includes(2);

`;

exports[`prefer-set-has > invalid(2): const foo = [1, 2, 3];\nconst isExists = foo.includes(1);\nconst isExists2 = foo.includes(2); 2`] = `

Message:
> 1 | const foo = [1, 2, 3];
    |       ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
  2 | const isExists = foo.includes(1);
  3 | const isExists2 = foo.includes(2);

Output:
  1 | const foo = new Set([1, 2, 3]);
  2 | const isExists = foo.has(1);
  3 | const isExists2 = foo.has(2);

`;

exports[`prefer-set-has > invalid(20): function wrap() {\n\tconst foo = [1, 2, 3];\n\n\tfunction unicorn() {\n\t\treturn foo.includes(1);\n\t}\n}\n\nconst bar = [4, 5, 6];\n\nfunction unicorn() {\n\treturn bar.includes(1);\n} 1`] = `

   1 | function wrap() {
   2 | 	const foo = [1, 2, 3];
   3 |
   4 | 	function unicorn() {
   5 | 		return foo.includes(1);
   6 | 	}
   7 | }
   8 |
   9 | const bar = [4, 5, 6];
  10 |
  11 | function unicorn() {
  12 | 	return bar.includes(1);
  13 | }

`;

exports[`prefer-set-has > invalid(20): function wrap() {\n\tconst foo = [1, 2, 3];\n\n\tfunction unicorn() {\n\t\treturn foo.includes(1);\n\t}\n}\n\nconst bar = [4, 5, 6];\n\nfunction unicorn() {\n\treturn bar.includes(1);\n} 2`] = `

Message:
   1 | function wrap() {
>  2 | 	const foo = [1, 2, 3];
     | 	      ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
   3 |
   4 | 	function unicorn() {
   5 | 		return foo.includes(1);
   6 | 	}
   7 | }
   8 |
   9 | const bar = [4, 5, 6];
  10 |
  11 | function unicorn() {
  12 | 	return bar.includes(1);
  13 | }

Output:
   1 | function wrap() {
   2 | 	const foo = new Set([1, 2, 3]);
   3 |
   4 | 	function unicorn() {
   5 | 		return foo.has(1);
   6 | 	}
   7 | }
   8 |
   9 | const bar = [4, 5, 6];
  10 |
  11 | function unicorn() {
  12 | 	return bar.includes(1);
  13 | }

`;

exports[`prefer-set-has > invalid(20): function wrap() {\n\tconst foo = [1, 2, 3];\n\n\tfunction unicorn() {\n\t\treturn foo.includes(1);\n\t}\n}\n\nconst bar = [4, 5, 6];\n\nfunction unicorn() {\n\treturn bar.includes(1);\n} 3`] = `

Message:
   1 | function wrap() {
   2 | 	const foo = [1, 2, 3];
   3 |
   4 | 	function unicorn() {
   5 | 		return foo.includes(1);
   6 | 	}
   7 | }
   8 |
>  9 | const bar = [4, 5, 6];
     |       ^^^ \`bar\` should be a \`Set\`, and use \`bar.has()\` to check existence or non-existence.
  10 |
  11 | function unicorn() {
  12 | 	return bar.includes(1);
  13 | }

Output:
   1 | function wrap() {
   2 | 	const foo = [1, 2, 3];
   3 |
   4 | 	function unicorn() {
   5 | 		return foo.includes(1);
   6 | 	}
   7 | }
   8 |
   9 | const bar = new Set([4, 5, 6]);
  10 |
  11 | function unicorn() {
  12 | 	return bar.has(1);
  13 | }

`;

exports[`prefer-set-has > invalid(21): const foo = [1, 2, 3];\nfor (const element of foo) {\n\tconsole.log(element);\n}\n\nfunction unicorn(value) {\n\treturn foo.includes(value);\n} 1`] = `

  1 | const foo = [1, 2, 3];
  2 | for (const element of foo) {
  3 | 	console.log(element);
  4 | }
  5 |
  6 | function unicorn(value) {
  7 | 	return foo.includes(value);
  8 | }

`;

exports[`prefer-set-has > invalid(21): const foo = [1, 2, 3];\nfor (const element of foo) {\n\tconsole.log(element);\n}\n\nfunction unicorn(value) {\n\treturn foo.includes(value);\n} 2`] = `

Message:
> 1 | const foo = [1, 2, 3];
    |       ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
  2 | for (const element of foo) {
  3 | 	console.log(element);
  4 | }
  5 |
  6 | function unicorn(value) {
  7 | 	return foo.includes(value);
  8 | }

Output:
  1 | const foo = new Set([1, 2, 3]);
  2 | for (const element of foo) {
  3 | 	console.log(element);
  4 | }
  5 |
  6 | function unicorn(value) {
  7 | 	return foo.has(value);
  8 | }

`;

exports[`prefer-set-has > invalid(22): const foo = [1, 2, 3];\nconst bar = [...foo];\n\nfunction unicorn(value) {\n\treturn foo.includes(value);\n} 1`] = `

  1 | const foo = [1, 2, 3];
  2 | const bar = [...foo];
  3 |
  4 | function unicorn(value) {
  5 | 	return foo.includes(value);
  6 | }

`;

exports[`prefer-set-has > invalid(22): const foo = [1, 2, 3];\nconst bar = [...foo];\n\nfunction unicorn(value) {\n\treturn foo.includes(value);\n} 2`] = `

Message:
> 1 | const foo = [1, 2, 3];
    |       ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
  2 | const bar = [...foo];
  3 |
  4 | function unicorn(value) {
  5 | 	return foo.includes(value);
  6 | }

Output:
  1 | const foo = new Set([1, 2, 3]);
  2 | const bar = [...foo];
  3 |
  4 | function unicorn(value) {
  5 | 	return foo.has(value);
  6 | }

`;

exports[`prefer-set-has > invalid(23): const foo = [1, 2, 3];\ncall(...foo);\n\nfunction unicorn(value) {\n\treturn foo.includes(value);\n} 1`] = `

  1 | const foo = [1, 2, 3];
  2 | call(...foo);
  3 |
  4 | function unicorn(value) {
  5 | 	return foo.includes(value);
  6 | }

`;

exports[`prefer-set-has > invalid(23): const foo = [1, 2, 3];\ncall(...foo);\n\nfunction unicorn(value) {\n\treturn foo.includes(value);\n} 2`] = `

Message:
> 1 | const foo = [1, 2, 3];
    |       ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
  2 | call(...foo);
  3 |
  4 | function unicorn(value) {
  5 | 	return foo.includes(value);
  6 | }

Output:
  1 | const foo = new Set([1, 2, 3]);
  2 | call(...foo);
  3 |
  4 | function unicorn(value) {
  5 | 	return foo.has(value);
  6 | }

`;

exports[`prefer-set-has > invalid(24): const foo = [1, 2, 3];\nnew Call(...foo);\n\nfunction unicorn(value) {\n\treturn foo.includes(value);\n} 1`] = `

  1 | const foo = [1, 2, 3];
  2 | new Call(...foo);
  3 |
  4 | function unicorn(value) {
  5 | 	return foo.includes(value);
  6 | }

`;

exports[`prefer-set-has > invalid(24): const foo = [1, 2, 3];\nnew Call(...foo);\n\nfunction unicorn(value) {\n\treturn foo.includes(value);\n} 2`] = `

Message:
> 1 | const foo = [1, 2, 3];
    |       ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
  2 | new Call(...foo);
  3 |
  4 | function unicorn(value) {
  5 | 	return foo.includes(value);
  6 | }

Output:
  1 | const foo = new Set([1, 2, 3]);
  2 | new Call(...foo);
  3 |
  4 | function unicorn(value) {
  5 | 	return foo.has(value);
  6 | }

`;

exports[`prefer-set-has > invalid(25): const foo = [1, 2, 3];\nconst length = foo.length;\n\nfunction unicorn(value) {\n\treturn foo.includes(value);\n} 1`] = `

  1 | const foo = [1, 2, 3];
  2 | const length = foo.length;
  3 |
  4 | function unicorn(value) {
  5 | 	return foo.includes(value);
  6 | }

`;

exports[`prefer-set-has > invalid(25): const foo = [1, 2, 3];\nconst length = foo.length;\n\nfunction unicorn(value) {\n\treturn foo.includes(value);\n} 2`] = `

Message:
> 1 | const foo = [1, 2, 3];
    |       ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
  2 | const length = foo.length;
  3 |
  4 | function unicorn(value) {
  5 | 	return foo.includes(value);
  6 | }

Output:
  1 | const foo = new Set([1, 2, 3]);
  2 | const length = foo.size;
  3 |
  4 | function unicorn(value) {
  5 | 	return foo.has(value);
  6 | }

`;

exports[`prefer-set-has > invalid(26): const foo = [1, 2, 3];\nfoo.forEach(element => {\n\tconsole.log(element);\n});\n\nfunction unicorn(value) {\n\treturn foo.includes(value);\n} 1`] = `

  1 | const foo = [1, 2, 3];
  2 | foo.forEach(element => {
  3 | 	console.log(element);
  4 | });
  5 |
  6 | function unicorn(value) {
  7 | 	return foo.includes(value);
  8 | }

`;

exports[`prefer-set-has > invalid(26): const foo = [1, 2, 3];\nfoo.forEach(element => {\n\tconsole.log(element);\n});\n\nfunction unicorn(value) {\n\treturn foo.includes(value);\n} 2`] = `

Message:
> 1 | const foo = [1, 2, 3];
    |       ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
  2 | foo.forEach(element => {
  3 | 	console.log(element);
  4 | });
  5 |
  6 | function unicorn(value) {
  7 | 	return foo.includes(value);
  8 | }

Output:
  1 | const foo = new Set([1, 2, 3]);
  2 | foo.forEach(element => {
  3 | 	console.log(element);
  4 | });
  5 |
  6 | function unicorn(value) {
  7 | 	return foo.has(value);
  8 | }

`;

exports[`prefer-set-has > invalid(27): const foo = [1, 2, 3];\nfunction wrap() {\n\tconst exists = foo.includes(1);\n\tconst bar = [1, 2, 3];\n\n\tfunction outer(find) {\n\t\tconst foo = [1, 2, 3];\n\t\twhile (a) {\n\t\t\tfoo.includes(1);\n\t\t}\n\n\t\tfunction inner(find) {\n\t\t\tconst bar = [1, 2, 3];\n\t\t\twhile (a) {\n\t\t\t\tconst exists = bar.includes(1);\n\t\t\t}\n\t\t}\n\t}\n} 1`] = `

   1 | const foo = [1, 2, 3];
   2 | function wrap() {
   3 | 	const exists = foo.includes(1);
   4 | 	const bar = [1, 2, 3];
   5 |
   6 | 	function outer(find) {
   7 | 		const foo = [1, 2, 3];
   8 | 		while (a) {
   9 | 			foo.includes(1);
  10 | 		}
  11 |
  12 | 		function inner(find) {
  13 | 			const bar = [1, 2, 3];
  14 | 			while (a) {
  15 | 				const exists = bar.includes(1);
  16 | 			}
  17 | 		}
  18 | 	}
  19 | }

`;

exports[`prefer-set-has > invalid(27): const foo = [1, 2, 3];\nfunction wrap() {\n\tconst exists = foo.includes(1);\n\tconst bar = [1, 2, 3];\n\n\tfunction outer(find) {\n\t\tconst foo = [1, 2, 3];\n\t\twhile (a) {\n\t\t\tfoo.includes(1);\n\t\t}\n\n\t\tfunction inner(find) {\n\t\t\tconst bar = [1, 2, 3];\n\t\t\twhile (a) {\n\t\t\t\tconst exists = bar.includes(1);\n\t\t\t}\n\t\t}\n\t}\n} 2`] = `

Message:
>  1 | const foo = [1, 2, 3];
     |       ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
   2 | function wrap() {
   3 | 	const exists = foo.includes(1);
   4 | 	const bar = [1, 2, 3];
   5 |
   6 | 	function outer(find) {
   7 | 		const foo = [1, 2, 3];
   8 | 		while (a) {
   9 | 			foo.includes(1);
  10 | 		}
  11 |
  12 | 		function inner(find) {
  13 | 			const bar = [1, 2, 3];
  14 | 			while (a) {
  15 | 				const exists = bar.includes(1);
  16 | 			}
  17 | 		}
  18 | 	}
  19 | }

Output:
   1 | const foo = new Set([1, 2, 3]);
   2 | function wrap() {
   3 | 	const exists = foo.has(1);
   4 | 	const bar = [1, 2, 3];
   5 |
   6 | 	function outer(find) {
   7 | 		const foo = [1, 2, 3];
   8 | 		while (a) {
   9 | 			foo.includes(1);
  10 | 		}
  11 |
  12 | 		function inner(find) {
  13 | 			const bar = [1, 2, 3];
  14 | 			while (a) {
  15 | 				const exists = bar.includes(1);
  16 | 			}
  17 | 		}
  18 | 	}
  19 | }

`;

exports[`prefer-set-has > invalid(27): const foo = [1, 2, 3];\nfunction wrap() {\n\tconst exists = foo.includes(1);\n\tconst bar = [1, 2, 3];\n\n\tfunction outer(find) {\n\t\tconst foo = [1, 2, 3];\n\t\twhile (a) {\n\t\t\tfoo.includes(1);\n\t\t}\n\n\t\tfunction inner(find) {\n\t\t\tconst bar = [1, 2, 3];\n\t\t\twhile (a) {\n\t\t\t\tconst exists = bar.includes(1);\n\t\t\t}\n\t\t}\n\t}\n} 3`] = `

Message:
   1 | const foo = [1, 2, 3];
   2 | function wrap() {
   3 | 	const exists = foo.includes(1);
   4 | 	const bar = [1, 2, 3];
   5 |
   6 | 	function outer(find) {
>  7 | 		const foo = [1, 2, 3];
     | 		      ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
   8 | 		while (a) {
   9 | 			foo.includes(1);
  10 | 		}
  11 |
  12 | 		function inner(find) {
  13 | 			const bar = [1, 2, 3];
  14 | 			while (a) {
  15 | 				const exists = bar.includes(1);
  16 | 			}
  17 | 		}
  18 | 	}
  19 | }

Output:
   1 | const foo = [1, 2, 3];
   2 | function wrap() {
   3 | 	const exists = foo.includes(1);
   4 | 	const bar = [1, 2, 3];
   5 |
   6 | 	function outer(find) {
   7 | 		const foo = new Set([1, 2, 3]);
   8 | 		while (a) {
   9 | 			foo.has(1);
  10 | 		}
  11 |
  12 | 		function inner(find) {
  13 | 			const bar = [1, 2, 3];
  14 | 			while (a) {
  15 | 				const exists = bar.includes(1);
  16 | 			}
  17 | 		}
  18 | 	}
  19 | }

`;

exports[`prefer-set-has > invalid(27): const foo = [1, 2, 3];\nfunction wrap() {\n\tconst exists = foo.includes(1);\n\tconst bar = [1, 2, 3];\n\n\tfunction outer(find) {\n\t\tconst foo = [1, 2, 3];\n\t\twhile (a) {\n\t\t\tfoo.includes(1);\n\t\t}\n\n\t\tfunction inner(find) {\n\t\t\tconst bar = [1, 2, 3];\n\t\t\twhile (a) {\n\t\t\t\tconst exists = bar.includes(1);\n\t\t\t}\n\t\t}\n\t}\n} 4`] = `

Message:
   1 | const foo = [1, 2, 3];
   2 | function wrap() {
   3 | 	const exists = foo.includes(1);
   4 | 	const bar = [1, 2, 3];
   5 |
   6 | 	function outer(find) {
   7 | 		const foo = [1, 2, 3];
   8 | 		while (a) {
   9 | 			foo.includes(1);
  10 | 		}
  11 |
  12 | 		function inner(find) {
> 13 | 			const bar = [1, 2, 3];
     | 			      ^^^ \`bar\` should be a \`Set\`, and use \`bar.has()\` to check existence or non-existence.
  14 | 			while (a) {
  15 | 				const exists = bar.includes(1);
  16 | 			}
  17 | 		}
  18 | 	}
  19 | }

Output:
   1 | const foo = [1, 2, 3];
   2 | function wrap() {
   3 | 	const exists = foo.includes(1);
   4 | 	const bar = [1, 2, 3];
   5 |
   6 | 	function outer(find) {
   7 | 		const foo = [1, 2, 3];
   8 | 		while (a) {
   9 | 			foo.includes(1);
  10 | 		}
  11 |
  12 | 		function inner(find) {
  13 | 			const bar = new Set([1, 2, 3]);
  14 | 			while (a) {
  15 | 				const exists = bar.has(1);
  16 | 			}
  17 | 		}
  18 | 	}
  19 | }

`;

exports[`prefer-set-has > invalid(28): const foo = Array(1, 2);\nfunction unicorn() {\n\treturn foo.includes(1);\n} 1`] = `

  1 | const foo = Array(1, 2);
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

`;

exports[`prefer-set-has > invalid(28): const foo = Array(1, 2);\nfunction unicorn() {\n\treturn foo.includes(1);\n} 2`] = `

Message:
> 1 | const foo = Array(1, 2);
    |       ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

Output:
  1 | const foo = new Set(Array(1, 2));
  2 | function unicorn() {
  3 | 	return foo.has(1);
  4 | }

`;

exports[`prefer-set-has > invalid(29): const foo = new Array(1, 2);\nfunction unicorn() {\n\treturn foo.includes(1);\n} 1`] = `

  1 | const foo = new Array(1, 2);
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

`;

exports[`prefer-set-has > invalid(29): const foo = new Array(1, 2);\nfunction unicorn() {\n\treturn foo.includes(1);\n} 2`] = `

Message:
> 1 | const foo = new Array(1, 2);
    |       ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

Output:
  1 | const foo = new Set(new Array(1, 2));
  2 | function unicorn() {
  3 | 	return foo.has(1);
  4 | }

`;

exports[`prefer-set-has > invalid(3): const foo = Array.from({length: 5}, (_, index) => index);\nfunction unicorn() {\n\treturn foo.includes(1);\n} 1`] = `

Options:
- minimumItems: 5

Code:
  1 | const foo = Array.from({length: 5}, (_, index) => index);
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

`;

exports[`prefer-set-has > invalid(3): const foo = Array.from({length: 5}, (_, index) => index);\nfunction unicorn() {\n\treturn foo.includes(1);\n} 2`] = `

Message:
> 1 | const foo = Array.from({length: 5}, (_, index) => index);
    |       ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

Output:
  1 | const foo = new Set(Array.from({length: 5}, (_, index) => index));
  2 | function unicorn() {
  3 | 	return foo.has(1);
  4 | }

`;

exports[`prefer-set-has > invalid(3): const foo = [1, 2, 3];\nfor (const a of b) {\n\tfoo.includes(1);\n} 1`] = `

  1 | const foo = [1, 2, 3];
  2 | for (const a of b) {
  3 | 	foo.includes(1);
  4 | }

`;

exports[`prefer-set-has > invalid(3): const foo = [1, 2, 3];\nfor (const a of b) {\n\tfoo.includes(1);\n} 2`] = `

Message:
> 1 | const foo = [1, 2, 3];
    |       ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
  2 | for (const a of b) {
  3 | 	foo.includes(1);
  4 | }

Output:
  1 | const foo = new Set([1, 2, 3]);
  2 | for (const a of b) {
  3 | 	foo.has(1);
  4 | }

`;

exports[`prefer-set-has > invalid(30): const foo = Array.from({length: 1}, (_, index) => index);\nfunction unicorn() {\n\treturn foo.includes(1);\n} 1`] = `

  1 | const foo = Array.from({length: 1}, (_, index) => index);
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

`;

exports[`prefer-set-has > invalid(30): const foo = Array.from({length: 1}, (_, index) => index);\nfunction unicorn() {\n\treturn foo.includes(1);\n} 2`] = `

Message:
> 1 | const foo = Array.from({length: 1}, (_, index) => index);
    |       ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

Output:
  1 | const foo = new Set(Array.from({length: 1}, (_, index) => index));
  2 | function unicorn() {
  3 | 	return foo.has(1);
  4 | }

`;

exports[`prefer-set-has > invalid(31): const foo = Array.of(1, 2);\nfunction unicorn() {\n\treturn foo.includes(1);\n} 1`] = `

  1 | const foo = Array.of(1, 2);
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

`;

exports[`prefer-set-has > invalid(31): const foo = Array.of(1, 2);\nfunction unicorn() {\n\treturn foo.includes(1);\n} 2`] = `

Message:
> 1 | const foo = Array.of(1, 2);
    |       ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

Output:
  1 | const foo = new Set(Array.of(1, 2));
  2 | function unicorn() {
  3 | 	return foo.has(1);
  4 | }

`;

exports[`prefer-set-has > invalid(32): const foo = bar.copyWithin();\nfunction unicorn() {\n\treturn foo.includes(1);\n} 1`] = `

  1 | const foo = bar.copyWithin();
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

`;

exports[`prefer-set-has > invalid(32): const foo = bar.copyWithin();\nfunction unicorn() {\n\treturn foo.includes(1);\n} 2`] = `

Message:
> 1 | const foo = bar.copyWithin();
    |       ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

Output:
  1 | const foo = new Set(bar.copyWithin());
  2 | function unicorn() {
  3 | 	return foo.has(1);
  4 | }

`;

exports[`prefer-set-has > invalid(33): const foo = bar.fill();\nfunction unicorn() {\n\treturn foo.includes(1);\n} 1`] = `

  1 | const foo = bar.fill();
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

`;

exports[`prefer-set-has > invalid(33): const foo = bar.fill();\nfunction unicorn() {\n\treturn foo.includes(1);\n} 2`] = `

Message:
> 1 | const foo = bar.fill();
    |       ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

Output:
  1 | const foo = new Set(bar.fill());
  2 | function unicorn() {
  3 | 	return foo.has(1);
  4 | }

`;

exports[`prefer-set-has > invalid(34): const foo = bar.filter();\nfunction unicorn() {\n\treturn foo.includes(1);\n} 1`] = `

  1 | const foo = bar.filter();
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

`;

exports[`prefer-set-has > invalid(34): const foo = bar.filter();\nfunction unicorn() {\n\treturn foo.includes(1);\n} 2`] = `

Message:
> 1 | const foo = bar.filter();
    |       ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

Output:
  1 | const foo = new Set(bar.filter());
  2 | function unicorn() {
  3 | 	return foo.has(1);
  4 | }

`;

exports[`prefer-set-has > invalid(35): const foo = bar.flat();\nfunction unicorn() {\n\treturn foo.includes(1);\n} 1`] = `

  1 | const foo = bar.flat();
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

`;

exports[`prefer-set-has > invalid(35): const foo = bar.flat();\nfunction unicorn() {\n\treturn foo.includes(1);\n} 2`] = `

Message:
> 1 | const foo = bar.flat();
    |       ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

Output:
  1 | const foo = new Set(bar.flat());
  2 | function unicorn() {
  3 | 	return foo.has(1);
  4 | }

`;

exports[`prefer-set-has > invalid(36): const foo = bar.flatMap();\nfunction unicorn() {\n\treturn foo.includes(1);\n} 1`] = `

  1 | const foo = bar.flatMap();
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

`;

exports[`prefer-set-has > invalid(36): const foo = bar.flatMap();\nfunction unicorn() {\n\treturn foo.includes(1);\n} 2`] = `

Message:
> 1 | const foo = bar.flatMap();
    |       ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

Output:
  1 | const foo = new Set(bar.flatMap());
  2 | function unicorn() {
  3 | 	return foo.has(1);
  4 | }

`;

exports[`prefer-set-has > invalid(37): const foo = bar.map();\nfunction unicorn() {\n\treturn foo.includes(1);\n} 1`] = `

  1 | const foo = bar.map();
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

`;

exports[`prefer-set-has > invalid(37): const foo = bar.map();\nfunction unicorn() {\n\treturn foo.includes(1);\n} 2`] = `

Message:
> 1 | const foo = bar.map();
    |       ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

Output:
  1 | const foo = new Set(bar.map());
  2 | function unicorn() {
  3 | 	return foo.has(1);
  4 | }

`;

exports[`prefer-set-has > invalid(38): const foo = bar.reverse();\nfunction unicorn() {\n\treturn foo.includes(1);\n} 1`] = `

  1 | const foo = bar.reverse();
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

`;

exports[`prefer-set-has > invalid(38): const foo = bar.reverse();\nfunction unicorn() {\n\treturn foo.includes(1);\n} 2`] = `

Message:
> 1 | const foo = bar.reverse();
    |       ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

Output:
  1 | const foo = new Set(bar.reverse());
  2 | function unicorn() {
  3 | 	return foo.has(1);
  4 | }

`;

exports[`prefer-set-has > invalid(39): const foo = bar.sort();\nfunction unicorn() {\n\treturn foo.includes(1);\n} 1`] = `

  1 | const foo = bar.sort();
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

`;

exports[`prefer-set-has > invalid(39): const foo = bar.sort();\nfunction unicorn() {\n\treturn foo.includes(1);\n} 2`] = `

Message:
> 1 | const foo = bar.sort();
    |       ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

Output:
  1 | const foo = new Set(bar.sort());
  2 | function unicorn() {
  3 | 	return foo.has(1);
  4 | }

`;

exports[`prefer-set-has > invalid(4): async function unicorn() {\n\tconst foo = [1, 2, 3];\n\tfor await (const a of b) {\n\t\tfoo.includes(1);\n\t}\n} 1`] = `

  1 | async function unicorn() {
  2 | 	const foo = [1, 2, 3];
  3 | 	for await (const a of b) {
  4 | 		foo.includes(1);
  5 | 	}
  6 | }

`;

exports[`prefer-set-has > invalid(4): async function unicorn() {\n\tconst foo = [1, 2, 3];\n\tfor await (const a of b) {\n\t\tfoo.includes(1);\n\t}\n} 2`] = `

Message:
  1 | async function unicorn() {
> 2 | 	const foo = [1, 2, 3];
    | 	      ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
  3 | 	for await (const a of b) {
  4 | 		foo.includes(1);
  5 | 	}
  6 | }

Output:
  1 | async function unicorn() {
  2 | 	const foo = new Set([1, 2, 3]);
  3 | 	for await (const a of b) {
  4 | 		foo.has(1);
  5 | 	}
  6 | }

`;

exports[`prefer-set-has > invalid(4): const foo = Array.from({length: 2 + 3}, (_, index) => index);\nfunction unicorn() {\n\treturn foo.includes(1);\n} 1`] = `

Options:
- minimumItems: 5

Code:
  1 | const foo = Array.from({length: 2 + 3}, (_, index) => index);
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

`;

exports[`prefer-set-has > invalid(4): const foo = Array.from({length: 2 + 3}, (_, index) => index);\nfunction unicorn() {\n\treturn foo.includes(1);\n} 2`] = `

Message:
> 1 | const foo = Array.from({length: 2 + 3}, (_, index) => index);
    |       ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

Output:
  1 | const foo = new Set(Array.from({length: 2 + 3}, (_, index) => index));
  2 | function unicorn() {
  3 | 	return foo.has(1);
  4 | }

`;

exports[`prefer-set-has > invalid(40): const foo = bar.splice();\nfunction unicorn() {\n\treturn foo.includes(1);\n} 1`] = `

  1 | const foo = bar.splice();
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

`;

exports[`prefer-set-has > invalid(40): const foo = bar.splice();\nfunction unicorn() {\n\treturn foo.includes(1);\n} 2`] = `

Message:
> 1 | const foo = bar.splice();
    |       ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

Output:
  1 | const foo = new Set(bar.splice());
  2 | function unicorn() {
  3 | 	return foo.has(1);
  4 | }

`;

exports[`prefer-set-has > invalid(41): const foo = bar.toReversed();\nfunction unicorn() {\n\treturn foo.includes(1);\n} 1`] = `

  1 | const foo = bar.toReversed();
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

`;

exports[`prefer-set-has > invalid(41): const foo = bar.toReversed();\nfunction unicorn() {\n\treturn foo.includes(1);\n} 2`] = `

Message:
> 1 | const foo = bar.toReversed();
    |       ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

Output:
  1 | const foo = new Set(bar.toReversed());
  2 | function unicorn() {
  3 | 	return foo.has(1);
  4 | }

`;

exports[`prefer-set-has > invalid(42): const foo = bar.toSorted();\nfunction unicorn() {\n\treturn foo.includes(1);\n} 1`] = `

  1 | const foo = bar.toSorted();
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

`;

exports[`prefer-set-has > invalid(42): const foo = bar.toSorted();\nfunction unicorn() {\n\treturn foo.includes(1);\n} 2`] = `

Message:
> 1 | const foo = bar.toSorted();
    |       ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

Output:
  1 | const foo = new Set(bar.toSorted());
  2 | function unicorn() {
  3 | 	return foo.has(1);
  4 | }

`;

exports[`prefer-set-has > invalid(43): const foo = bar.toSpliced();\nfunction unicorn() {\n\treturn foo.includes(1);\n} 1`] = `

  1 | const foo = bar.toSpliced();
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

`;

exports[`prefer-set-has > invalid(43): const foo = bar.toSpliced();\nfunction unicorn() {\n\treturn foo.includes(1);\n} 2`] = `

Message:
> 1 | const foo = bar.toSpliced();
    |       ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

Output:
  1 | const foo = new Set(bar.toSpliced());
  2 | function unicorn() {
  3 | 	return foo.has(1);
  4 | }

`;

exports[`prefer-set-has > invalid(44): const foo = bar.with();\nfunction unicorn() {\n\treturn foo.includes(1);\n} 1`] = `

  1 | const foo = bar.with();
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

`;

exports[`prefer-set-has > invalid(44): const foo = bar.with();\nfunction unicorn() {\n\treturn foo.includes(1);\n} 2`] = `

Message:
> 1 | const foo = bar.with();
    |       ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

Output:
  1 | const foo = new Set(bar.with());
  2 | function unicorn() {
  3 | 	return foo.has(1);
  4 | }

`;

exports[`prefer-set-has > invalid(45): const foo = bar.toArray();\nfunction unicorn() {\n\treturn foo.includes(1);\n} 1`] = `

  1 | const foo = bar.toArray();
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

`;

exports[`prefer-set-has > invalid(45): const foo = bar.toArray();\nfunction unicorn() {\n\treturn foo.includes(1);\n} 2`] = `

Message:
> 1 | const foo = bar.toArray();
    |       ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

Output:
  1 | const foo = new Set(bar.toArray());
  2 | function unicorn() {
  3 | 	return foo.has(1);
  4 | }

`;

exports[`prefer-set-has > invalid(46): const foo = bar.split();\nfunction unicorn() {\n\treturn foo.includes(1);\n} 1`] = `

  1 | const foo = bar.split();
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

`;

exports[`prefer-set-has > invalid(46): const foo = bar.split();\nfunction unicorn() {\n\treturn foo.includes(1);\n} 2`] = `

Message:
> 1 | const foo = bar.split();
    |       ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

Output:
  1 | const foo = new Set(bar.split());
  2 | function unicorn() {
  3 | 	return foo.has(1);
  4 | }

`;

exports[`prefer-set-has > invalid(47): const foo = [1, 2, 3].slice();\nfoo.includes(1) || foo.includes(2); 1`] = `

  1 | const foo = [1, 2, 3].slice();
  2 | foo.includes(1) || foo.includes(2);

`;

exports[`prefer-set-has > invalid(47): const foo = [1, 2, 3].slice();\nfoo.includes(1) || foo.includes(2); 2`] = `

Message:
> 1 | const foo = [1, 2, 3].slice();
    |       ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
  2 | foo.includes(1) || foo.includes(2);

Output:
  1 | const foo = new Set([1, 2, 3].slice());
  2 | foo.has(1) || foo.has(2);

`;

exports[`prefer-set-has > invalid(48): const foo = [1, 2, 3].concat(4);\nfoo.includes(1) || foo.includes(2); 1`] = `

  1 | const foo = [1, 2, 3].concat(4);
  2 | foo.includes(1) || foo.includes(2);

`;

exports[`prefer-set-has > invalid(48): const foo = [1, 2, 3].concat(4);\nfoo.includes(1) || foo.includes(2); 2`] = `

Message:
> 1 | const foo = [1, 2, 3].concat(4);
    |       ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
  2 | foo.includes(1) || foo.includes(2);

Output:
  1 | const foo = new Set([1, 2, 3].concat(4));
  2 | foo.has(1) || foo.has(2);

`;

exports[`prefer-set-has > invalid(49): const items = [1, 2, 3];\nconst foo = items.slice();\nfoo.includes(1) || foo.includes(2); 1`] = `

  1 | const items = [1, 2, 3];
  2 | const foo = items.slice();
  3 | foo.includes(1) || foo.includes(2);

`;

exports[`prefer-set-has > invalid(49): const items = [1, 2, 3];\nconst foo = items.slice();\nfoo.includes(1) || foo.includes(2); 2`] = `

Message:
  1 | const items = [1, 2, 3];
> 2 | const foo = items.slice();
    |       ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
  3 | foo.includes(1) || foo.includes(2);

Output:
  1 | const items = [1, 2, 3];
  2 | const foo = new Set(items.slice());
  3 | foo.has(1) || foo.has(2);

`;

exports[`prefer-set-has > invalid(5): const foo = Array.from([1, 2, 3, 4, 5]);\nfunction unicorn() {\n\treturn foo.includes(1);\n} 1`] = `

Options:
- minimumItems: 5

Code:
  1 | const foo = Array.from([1, 2, 3, 4, 5]);
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

`;

exports[`prefer-set-has > invalid(5): const foo = Array.from([1, 2, 3, 4, 5]);\nfunction unicorn() {\n\treturn foo.includes(1);\n} 2`] = `

Message:
> 1 | const foo = Array.from([1, 2, 3, 4, 5]);
    |       ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

Output:
  1 | const foo = new Set(Array.from([1, 2, 3, 4, 5]));
  2 | function unicorn() {
  3 | 	return foo.has(1);
  4 | }

`;

exports[`prefer-set-has > invalid(5): const foo = [1, 2, 3];\nfor (let i = 0; i < n; i++) {\n\tfoo.includes(1);\n} 1`] = `

  1 | const foo = [1, 2, 3];
  2 | for (let i = 0; i < n; i++) {
  3 | 	foo.includes(1);
  4 | }

`;

exports[`prefer-set-has > invalid(5): const foo = [1, 2, 3];\nfor (let i = 0; i < n; i++) {\n\tfoo.includes(1);\n} 2`] = `

Message:
> 1 | const foo = [1, 2, 3];
    |       ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
  2 | for (let i = 0; i < n; i++) {
  3 | 	foo.includes(1);
  4 | }

Output:
  1 | const foo = new Set([1, 2, 3]);
  2 | for (let i = 0; i < n; i++) {
  3 | 	foo.has(1);
  4 | }

`;

exports[`prefer-set-has > invalid(50): const items = [1, 2, 3];\nconst foo = items.concat(4);\nfoo.includes(1) || foo.includes(2); 1`] = `

  1 | const items = [1, 2, 3];
  2 | const foo = items.concat(4);
  3 | foo.includes(1) || foo.includes(2);

`;

exports[`prefer-set-has > invalid(50): const items = [1, 2, 3];\nconst foo = items.concat(4);\nfoo.includes(1) || foo.includes(2); 2`] = `

Message:
  1 | const items = [1, 2, 3];
> 2 | const foo = items.concat(4);
    |       ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
  3 | foo.includes(1) || foo.includes(2);

Output:
  1 | const items = [1, 2, 3];
  2 | const foo = new Set(items.concat(4));
  3 | foo.has(1) || foo.has(2);

`;

exports[`prefer-set-has > invalid(51): const foo = _([1,2,3]);\nconst bar = foo.map(value => value);\nfunction unicorn() {\n\treturn bar.includes(1);\n} 1`] = `

  1 | const foo = _([1,2,3]);
  2 | const bar = foo.map(value => value);
  3 | function unicorn() {
  4 | 	return bar.includes(1);
  5 | }

`;

exports[`prefer-set-has > invalid(51): const foo = _([1,2,3]);\nconst bar = foo.map(value => value);\nfunction unicorn() {\n\treturn bar.includes(1);\n} 2`] = `

Message:
  1 | const foo = _([1,2,3]);
> 2 | const bar = foo.map(value => value);
    |       ^^^ \`bar\` should be a \`Set\`, and use \`bar.has()\` to check existence or non-existence.
  3 | function unicorn() {
  4 | 	return bar.includes(1);
  5 | }

Output:
  1 | const foo = _([1,2,3]);
  2 | const bar = new Set(foo.map(value => value));
  3 | function unicorn() {
  4 | 	return bar.has(1);
  5 | }

`;

exports[`prefer-set-has > invalid(6): const foo = Array.from('hello');\nfunction unicorn() {\n\treturn foo.includes('h');\n} 1`] = `

Options:
- minimumItems: 5

Code:
  1 | const foo = Array.from('hello');
  2 | function unicorn() {
  3 | 	return foo.includes('h');
  4 | }

`;

exports[`prefer-set-has > invalid(6): const foo = Array.from('hello');\nfunction unicorn() {\n\treturn foo.includes('h');\n} 2`] = `

Message:
> 1 | const foo = Array.from('hello');
    |       ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
  2 | function unicorn() {
  3 | 	return foo.includes('h');
  4 | }

Output:
  1 | const foo = new Set(Array.from('hello'));
  2 | function unicorn() {
  3 | 	return foo.has('h');
  4 | }

`;

exports[`prefer-set-has > invalid(6): const foo = [1, 2, 3];\nfor (let a in b) {\n\tfoo.includes(1);\n} 1`] = `

  1 | const foo = [1, 2, 3];
  2 | for (let a in b) {
  3 | 	foo.includes(1);
  4 | }

`;

exports[`prefer-set-has > invalid(6): const foo = [1, 2, 3];\nfor (let a in b) {\n\tfoo.includes(1);\n} 2`] = `

Message:
> 1 | const foo = [1, 2, 3];
    |       ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
  2 | for (let a in b) {
  3 | 	foo.includes(1);
  4 | }

Output:
  1 | const foo = new Set([1, 2, 3]);
  2 | for (let a in b) {
  3 | 	foo.has(1);
  4 | }

`;

exports[`prefer-set-has > invalid(7): const foo = Array(5);\nfunction unicorn() {\n\treturn foo.includes(1);\n} 1`] = `

Options:
- minimumItems: 5

Code:
  1 | const foo = Array(5);
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

`;

exports[`prefer-set-has > invalid(7): const foo = Array(5);\nfunction unicorn() {\n\treturn foo.includes(1);\n} 2`] = `

Message:
> 1 | const foo = Array(5);
    |       ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

Output:
  1 | const foo = new Set(Array(5));
  2 | function unicorn() {
  3 | 	return foo.has(1);
  4 | }

`;

exports[`prefer-set-has > invalid(7): const foo = [1, 2, 3];\nwhile (a)  {\n\tfoo.includes(1);\n} 1`] = `

  1 | const foo = [1, 2, 3];
  2 | while (a)  {
  3 | 	foo.includes(1);
  4 | }

`;

exports[`prefer-set-has > invalid(7): const foo = [1, 2, 3];\nwhile (a)  {\n\tfoo.includes(1);\n} 2`] = `

Message:
> 1 | const foo = [1, 2, 3];
    |       ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
  2 | while (a)  {
  3 | 	foo.includes(1);
  4 | }

Output:
  1 | const foo = new Set([1, 2, 3]);
  2 | while (a)  {
  3 | 	foo.has(1);
  4 | }

`;

exports[`prefer-set-has > invalid(8): const foo = Array(2 + 3);\nfunction unicorn() {\n\treturn foo.includes(1);\n} 1`] = `

Options:
- minimumItems: 5

Code:
  1 | const foo = Array(2 + 3);
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

`;

exports[`prefer-set-has > invalid(8): const foo = Array(2 + 3);\nfunction unicorn() {\n\treturn foo.includes(1);\n} 2`] = `

Message:
> 1 | const foo = Array(2 + 3);
    |       ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

Output:
  1 | const foo = new Set(Array(2 + 3));
  2 | function unicorn() {
  3 | 	return foo.has(1);
  4 | }

`;

exports[`prefer-set-has > invalid(8): const foo = [1, 2, 3];\ndo {\n\tfoo.includes(1);\n} while (a) 1`] = `

  1 | const foo = [1, 2, 3];
  2 | do {
  3 | 	foo.includes(1);
  4 | } while (a)

`;

exports[`prefer-set-has > invalid(8): const foo = [1, 2, 3];\ndo {\n\tfoo.includes(1);\n} while (a) 2`] = `

Message:
> 1 | const foo = [1, 2, 3];
    |       ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
  2 | do {
  3 | 	foo.includes(1);
  4 | } while (a)

Output:
  1 | const foo = new Set([1, 2, 3]);
  2 | do {
  3 | 	foo.has(1);
  4 | } while (a)

`;

exports[`prefer-set-has > invalid(9): const foo = Array(1, 2, 3, 4, 5);\nfunction unicorn() {\n\treturn foo.includes(1);\n} 1`] = `

Options:
- minimumItems: 5

Code:
  1 | const foo = Array(1, 2, 3, 4, 5);
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

`;

exports[`prefer-set-has > invalid(9): const foo = Array(1, 2, 3, 4, 5);\nfunction unicorn() {\n\treturn foo.includes(1);\n} 2`] = `

Message:
> 1 | const foo = Array(1, 2, 3, 4, 5);
    |       ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
  2 | function unicorn() {
  3 | 	return foo.includes(1);
  4 | }

Output:
  1 | const foo = new Set(Array(1, 2, 3, 4, 5));
  2 | function unicorn() {
  3 | 	return foo.has(1);
  4 | }

`;

exports[`prefer-set-has > invalid(9): const foo = [1, 2, 3];\ndo {\n\t// …\n} while (foo.includes(1)) 1`] = `

  1 | const foo = [1, 2, 3];
  2 | do {
  3 | 	// …
  4 | } while (foo.includes(1))

`;

exports[`prefer-set-has > invalid(9): const foo = [1, 2, 3];\ndo {\n\t// …\n} while (foo.includes(1)) 2`] = `

Message:
> 1 | const foo = [1, 2, 3];
    |       ^^^ \`foo\` should be a \`Set\`, and use \`foo.has()\` to check existence or non-existence.
  2 | do {
  3 | 	// …
  4 | } while (foo.includes(1))

Output:
  1 | const foo = new Set([1, 2, 3]);
  2 | do {
  3 | 	// …
  4 | } while (foo.has(1))

`;
